name:                halide-hs
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
-- copyright:           
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Halide
    Halide.Buffer
    Halide.Type
    Halide.Inline
    Halide.Param
    Halide.Target
    Halide.Func
    Halide.Var
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base >=4.9,
    inline-c == 0.5.6.1,
    inline-c-cpp == 0.1.0.0,
    containers,
    template-haskell,
    lens,
    transformers,
    bytestring,
    vector,
    parsers,
    unordered-containers,
    containers,
    dense
  hs-source-dirs:      src
  default-language:    Haskell2010
  if os(darwin)
    extra-libraries: c++, halide
  else
    extra-libraries: stdc++ halide
  c-sources:
    cbits/halide-hs.cpp
    src/Halide/Var.cpp
    src/Halide/Param.cpp
  cc-options: -std=c++11
  ghc-options: -Wall

